frontend: makes top bar fixed and styles the scrollbar

--- a/frontend/src/app/pages/app-layout/app-layout.component.scss
+++ b/frontend/src/app/pages/app-layout/app-layout.component.scss
@@ -5,8 +5,9 @@
 }
 
 :host .content {
-  height: Calc(100% - 64px);
+  margin-top: 64px;
   width: 100%;
+  overflow-y: auto;
 
   ::ng-deep > .ng-star-inserted {
     height: 100%;
